crates/cosmon-cli/tests/snapshots/peek_snapshot__peek_row_completed_with_temp_hot_is_terminal.snap
---
source: crates/cosmon-cli/tests/peek_snapshot.rs
expression: "render_row(&i, false)"
---
INPUTS
  status:        completed
  heartbeat:     none
  has_blockers:  false
  ghost:         false
  drift:         false
  tags:          temp:hot
  whisper_fresh: false

RENDER
  row_kind:       Terminal
  label:          terminal
  lifecycle_glyph ◌   style=fg=DarkGray mod=DIM
  temp_glyph      🔥   style=fg=Red mod=NONE
  whisper_glyph       style=fg=- mod=NONE

STRIP (what the operator sees)
  [◌] [🔥] [ ]
