crates/cosmon-cli/tests/snapshots/peek_snapshot__peek_row_frozen_no_worker.snap
---
source: crates/cosmon-cli/tests/peek_snapshot.rs
expression: "render_row(&i, false)"
---
INPUTS
  status:        frozen
  heartbeat:     none
  has_blockers:  false
  ghost:         false
  drift:         false
  tags:          (none)
  whisper_fresh: false

RENDER
  row_kind:       Frozen
  label:          frozen
  lifecycle_glyph 🧊   style=fg=Cyan mod=NONE
  temp_glyph          style=fg=- mod=NONE
  whisper_glyph       style=fg=- mod=NONE

STRIP (what the operator sees)
  [🧊] [ ] [ ]
