crates/cosmon-cli/tests/snapshots/peek_snapshot__peek_row_frozen_whisper_fresh_bubble.snap
---
source: crates/cosmon-cli/tests/peek_snapshot.rs
expression: "render_row(&i, true)"
---
INPUTS
  status:        frozen
  heartbeat:     none
  has_blockers:  false
  ghost:         false
  drift:         false
  tags:          (none)
  whisper_fresh: true

RENDER
  row_kind:       Frozen
  label:          frozen
  lifecycle_glyph 🧊   style=fg=Cyan mod=NONE
  temp_glyph          style=fg=- mod=NONE
  whisper_glyph   🫧   style=fg=Cyan mod=NONE

STRIP (what the operator sees)
  [🧊] [ ] [🫧]
