crates/cosmon-cli/tests/snapshots/peek_snapshot__peek_row_healthy_idle_hb_no_tag_stale.snap
---
source: crates/cosmon-cli/tests/peek_snapshot.rs
expression: "render_row(&i, false)"
---
INPUTS
  status:        running
  heartbeat:     Idle
  has_blockers:  false
  ghost:         false
  drift:         false
  tags:          (none)
  whisper_fresh: false

RENDER
  row_kind:       Healthy
  label:          healthy
  lifecycle_glyph ♥   style=fg=Green mod=BOLD
  temp_glyph          style=fg=- mod=NONE
  whisper_glyph       style=fg=- mod=NONE

STRIP (what the operator sees)
  [♥] [ ] [ ]
